# FedL-with-FLWR-transformers-

./: README.md  client_111.py  client_112.py  graph.py  pyproject.toml  server.py  test  trans.py
